openshift/openshift-routes/manifest/team_hotdrink.yaml
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: frontend-hotdrinks
  labels:
      name: frontend-hotdrinks
spec:
  replicas: 2 
  template:
    metadata:
      labels:
        name: frontend-hotdrinks
    spec:
      containers:
      - name: frontend-hotdrinks
        image: quay.io/sample-apps/hotdrinks:v1
        ports:
        - name: hotdrinks-80
          containerPort: 80
        - name: hotdrinks-443
          containerPort: 443
#        imagePullPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: frontend-hotdrinks
spec:
  clusterIP: None
  ports:
  - name: hotdrinks-80
    port: 80
    targetPort: 80
  - name: hotdrinks-443
    port: 443
    targetPort: 443
  selector:
    name: frontend-hotdrinks

---
