openshift/openshift-routes/manifest/edge_route_colddrink.yaml
apiVersion: v1
kind: Route
metadata:
  name: route-edge-colddrink
  labels:
    name: colddrink
  namespace: beverages
  annotations:
   kubernetes.io/ingress.class: "Citrix"
spec:
  host: colddrink.beverages.com
  to:
    kind: Service
    name: frontend-colddrinks
  port:
    targetPort: 80  
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Allow
    key: |-
      -----BEGIN RSA PRIVATE KEY-----
                  ...
      -----END RSA PRIVATE KEY-----

    certificate: |-
      -----BEGIN CERTIFICATE-----
                ...
      -----END CERTIFICATE-----
