openshift/openshift-routes/manifest/edge_route_guestbook.yaml
apiVersion: v1
kind: Route
metadata:
  name: route-edge-guestbook
  labels:
    name: guestbook
  namespace: beverages
  annotations:
   kubernetes.io/ingress.class: "Citrix"
spec:
  host: guestbook.beverages.com
  to:
    kind: Service
    name: frontend-pods
  port:
    targetPort: 80  
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Allow
    key: |-
      -----BEGIN RSA PRIVATE KEY-----
              ...
      -----END RSA PRIVATE KEY-----

    certificate: |-
      -----BEGIN CERTIFICATE-----
              ...
      -----END CERTIFICATE-----
