openshift/openshift-routes/manifest/route-reencrypt-hoddrink.yaml
apiVersion: v1
kind: Route
metadata:
  name: secured-reencrypt-route
  labels:
    name: hotdrink
  namespace: beverages
  annotations:
   kubernetes.io/ingress.class: "Citrix"
spec:
  host: hotdrink.beverages.com
  to:
    kind: Service
    name: frontend-hotdrinks
  tls:
    termination: reencrypt

    key: |-
      -----BEGIN RSA PRIVATE KEY-----
      MIIEowIBAAKCAQEAzfCzxJhzh3QXVQ/Co++ouW/bZVsrRuUNxQ18uHYBVb4e8aZg
[...]
      yamwhS2NHWJLC5VJJWHQBa0tBdw8cNfI8Zc02M5AW6Luy2HoA9mG
      -----END RSA PRIVATE KEY-----

    certificate: |-
      -----BEGIN CERTIFICATE-----
      MIIDpTCCAo2gAwIBAgIJAK1d51GLlmInMA0GCSqGSIb3DQEBCwUAMGkxCzAJBgNV
[...]
      XAvgD+atop7ghvGXI9ojM2YJE11a1t/alg==
      -----END CERTIFICATE-----
    
    destinationCACertificate: |-            
      -----BEGIN CERTIFICATE-----
      MIIDpTCCAo2gAwIBAgIJAK1d51GLlmInMA0GCSqGSIb3DQEBCwUAMGkxCzAJBgNV
[...]
      XAvgD+atop7ghvGXI9ojM2YJE11a1t/alg==
      -----END CERTIFICATE-----
