openshift/openshift-routes/manifest/route_passthrough_colddrink.yaml
apiVersion: v1
kind: Route
metadata:
  name: route-passthrough-colddrink
  annotations:
   kubernetes.io/ingress.class: "Citrix"
spec:
  host: colddrink.beverages.com
#  path: "/" 
  to:
    kind: Service
    name: frontend-colddrinks
  tls:
    termination: passthrough
